--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -111,7 +111,24 @@
             margin: 4px 2px;
             cursor: pointer;
             border-radius: 8px;
-        }        
+        } 
+
+        button[type="submit"] {
+            background-color: #F5DF4D; /* Zelfde kleur als de titel */
+            color: black; /* Zwarte tekst voor contrast */
+            padding: 15px 30px; /* Grotere knop door meer padding */
+            font-size: 18px; /* Grotere tekst */
+            border: none;
+            border-radius: 10px; /* Rond de hoeken van de knop af */
+            cursor: pointer;
+            text-align: center;
+            display: inline-block;
+            margin: 10px 0; /* Ruimte rondom de knop */
+         }
+
+         button[type="submit"]:hover {
+            background-color: #FFD700; /* Lichte kleurverandering bij hover */
+         }
         
         .link-list {
             list-style: none;
