--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -32,6 +32,20 @@
             font-size: 16px;
         }
 
+        .btn {
+            background-color: #F5DF4D; /* Gele kleur */
+            border: none;
+            color: black;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
         .result {
             margin-top: 20px;
             font-family: 'Roboto Condensed',sans-serif;
