--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -82,6 +82,7 @@
         <input type="number" id="totaleLengte" placeholder="Totale lengte in mm" required>
 
         <button onclick="verdeelLengte()">Verdeel Lengte</button>
+        <input type="submit" class="btn" value="verdeelLengte">
         <p id="resultaat" style="color: #F5DF4D;"></p>
 
         <h3>Optioneel:</h3>        
