--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -81,7 +81,7 @@
         <p>Voer de totale lengte in (in mm):</p>
         <input type="number" id="totaleLengte" placeholder="Totale lengte in mm" required>
 
-        <button onclick="verdeelLengte()">Verdeel Lengte</button>
+        <button onclick="verdeelLengte()" class="btn" >Verdeel Lengte</button>
         <input type="submit" class="btn" value="verdeelLengte">
         <p id="resultaat" style="color: #F5DF4D;"></p>
 
