--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -15,6 +15,20 @@
             margin: 0;
         }
 
+        .btn {
+            background-color: #F5DF4D; /* Gele kleur */
+            border: none;
+            color: black;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
     </style>
 </head>
 <body>
@@ -93,7 +107,7 @@
         </div>
         <br><br>
 
-        <button type="submit">Bekijk het vereiste draadje</button>
+        <button type="submit" class="btn">Geef het vereiste draadje</button>
     </form>
 
     <h2>Resultaat</h2>
