--- a/buistabel.html
+++ b/buistabel.html
@@ -86,6 +86,20 @@
         .link2 {
             background-image: url('tape2.PNG');
         }
+
+        .btn {
+            background-color: #F5DF4D; /* Gele kleur */
+            border: none;
+            color: black;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
         
     </style>
 </head>
@@ -117,7 +131,7 @@
         <label for="maInput">mA:</label>
         <input type="number" id="maInput" placeholder="Voer mA in">
         <br>
-        <button onclick="calculateTime()">Bereken tijd</button>
+        <button class="btn" onclick="calculateTime()">Bereken tijd</button>
         <p id="result" style="color: #F5DF4D;"></p>
     </div>
 
