--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -35,6 +35,7 @@
         .form-item select {
             flex: 1;
             padding: 5px;
+            width: 50%
         }
 
         @media (max-width: 600px) {
