--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -65,9 +65,9 @@
         <br><br>
 
         <div id="enOptions" style="display:none;">
-            <label for="technique">Kies de techniek (EN Klasse B):</label>
+            <label for="technique">Opstelling:</label>
             <select id="technique" name="technique">
-                <option value="" disabled selected>Selecteer techniek</option>
+                <option value="" disabled selected>Selecteer opstelling</option>
                 <option value="SWSI">SWSI (Single-Wall Single Image)</option>
                 <option value="DWSI">DWSI (Double-Wall Single Image)</option>
                 <option value="DWDI">DWDI (Double-Wall Double Image)</option>
@@ -86,7 +86,7 @@
         <div id="asmeOptions" style="display:none;">
             <label for="asmeTechnique">Kies de ASME techniek:</label>
             <select id="asmeTechnique" name="asmeTechnique">
-                <option value="" disabled selected>Selecteer techniek</option>
+                <option value="" disabled selected>locatie BKI</option>
                 <option value="Sourceside">BKI bronzijde</option>
                 <option value="Filmside">BKI Filmzijde</option>
             </select>
