--- a/focusverandering.html
+++ b/focusverandering.html
@@ -12,6 +12,7 @@
             font-family: 'Roboto Condensed', sans-serif;
             padding: 50px;
             margin: 0;
+            min-height: 150vh;
         }
 
         /* Style for the calculate button */
