--- a/afzettinggamma.html
+++ b/afzettinggamma.html
@@ -13,6 +13,7 @@
             font-family: 'Roboto Condensed', sans-serif;
             padding: 50px;
             margin: 0;
+            min-height: 150vh;
         }
 
         /* Style for the calculate button */
