--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -113,7 +113,7 @@
     <h2>Resultaat</h2>
     <h2 id="result" style="color: #F5DF4D;"></h2>
     
-    <img id="asmeImage" src="Lascategorie.png" alt="ASME Lastype" style="display:none;">
+    <img id="asmeImage" src="Lascategorie.png" alt="ASME Lastype" style="display:none; align:center;">
 
     <script>
         document.getElementById("norm").addEventListener("change", function() {
