--- a/cw2.html
+++ b/cw2.html
@@ -207,7 +207,7 @@
     <script src="script.js"></script> <!-- Link naar externe JavaScript -->
 
     <form onsubmit="event.preventDefault(); berekenFilmlengte();">
-        <label for="rondnaadCentraal">Rondnaad Centraal:</label>
+        <label for="rondnaadCentraal">Centraal:</label>
         <input type="checkbox" id="rondnaadCentraal" name="rondnaadCentraal" onclick="toggleOpnamesInput()"><br><br>
         
         <label for="diameter">Diameter van de pijp (in mm):</label><br>
