--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -150,7 +150,7 @@
         Seconden: <input type="number" id="seconden" placeholder="Seconden" min="0" max="59"><br><br>
 
         <!-- Optie om FFD aan te geven -->
-        <label for="ffdVerandert">Film Focus Afstand (FFD) verandert</label><br><br>
+        <label for="ffdVerandert">Focus (FFD) verandert</label><br><br>
         <input type="checkbox" id="ffdVerandert">
 
         <div id="focusFields" style="display: none;">
