--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -29,6 +29,11 @@
         button[type="button"]:hover {
             background-color: #e0c944; /* Slightly darker yellow on hover */
         }
+
+        input[type="checkbox"] {
+            margin-bottom: 20px;
+        }
+        
     </style>
     <script>
         // Functie om minuten en seconden naar totale seconden om te zetten
