--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -33,6 +33,10 @@
         input[type="checkbox"] {
             margin-bottom: 20px;
         }
+
+        .ffdVerandert {
+            margin-bottom: 20px;
+        }
         
     </style>
     <script>
