--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -34,7 +34,7 @@
             margin-bottom: 20px;
         }
 
-        .ffdVerandert {
+        input[type="checkbox"]:label {
             margin-bottom: 20px;
         }
         
