--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -30,14 +30,11 @@
             background-color: #e0c944; /* Slightly darker yellow on hover */
         }
 
-        input[type="checkbox"] {
+        #ffdVerandert {
             margin-bottom: 20px;
         }
 
-        input[type="checkbox"]:label {
-            margin-bottom: 20px;
-        }
-        
+
     </style>
     <script>
         // Functie om minuten en seconden naar totale seconden om te zetten
