--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -31,9 +31,13 @@
         }
 
         #ffdVerandert {
-            margin-bottom: 20px;
+            display: in-line; 
+            margin-bottom: 20px; /* Voegt ruimte toe onder de checkbox */
         }
 
+        label[for="ffdVerandert"] {
+            display: in-line; 
+        }
 
     </style>
     <script>
