--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -29,14 +29,9 @@
         button[type="button"]:hover {
             background-color: #e0c944; /* Slightly darker yellow on hover */
         }
-
-        #ffdVerandert {
-            display: in-line; 
-            margin-bottom: 20px; /* Voegt ruimte toe onder de checkbox */
-        }
-
+        
         label[for="ffdVerandert"] {
-            display: in-line; 
+            margin-bottom: 20px;
         }
 
     </style>
