--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -24,6 +24,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            margin-top: 20px;
         }
 
         button[type="button"]:hover {
