--- a/verzet.html
+++ b/verzet.html
@@ -29,6 +29,7 @@
         input {
             padding: 10px;
             font-size: 16px;
+            align: center;
         }
 
         .result {
