--- a/verzet.html
+++ b/verzet.html
@@ -24,6 +24,7 @@
             display: block;
             margin-bottom: 10px;
             width: 100%; /* Zorgt dat invoervelden de hele breedte nemen binnen de container */
+            align: center;
         }
 
         input {
