--- a/verzet.html
+++ b/verzet.html
@@ -18,6 +18,9 @@
             max-width: 500px;
             margin: 0 auto; /* Centrerend */
             text-align: center; /* Centreer tekst */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         label, input {
