--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -157,7 +157,7 @@
 
         <!-- Optie om FFD aan te geven -->
         <label for="ffdVerandert">Focus (FFD) verandert</label>
-        <input type="checkbox" id="ffdVerandert">
+        <input type="checkbox" id="ffdVerandert"><br><br>
 
         <div id="focusFields" style="display: none;">
             <label for="oudeFocus">Oude Focus:</label>
