--- a/verval2.html
+++ b/verval2.html
@@ -72,7 +72,7 @@
             background-image: url('tape1.PNG');
         }
 
-        button[type="button"] {
+        button {
             background-color: #F5DF4D; /* Yellow color like the header */
             font-size: 20px; /* Increase font size */
             padding: 10px 20px; /* Increase padding */
@@ -82,7 +82,7 @@
             margin-top: 20px;
         }
 
-        button[type="button"]:hover {
+        button:hover {
             background-color: #e0c944; /* Slightly darker yellow on hover */
         }
 
