--- a/verval2.html
+++ b/verval2.html
@@ -18,7 +18,7 @@
          table {
             background-color: #293133; /* Grijze achtergrondkleur */
             border-collapse: collapse;
-            
+            margin: 0 auto;
         }
 
          table th, table td {
