--- a/verval2.html
+++ b/verval2.html
@@ -12,7 +12,7 @@
             font-family: 'Roboto Condensed', sans-serif;
             padding: 50px;
             margin: 0;
-            min-height: 150hv;
+            min-height: 150vh;
         }
                 /* Stijl voor de tabel */
          table {
