--- a/timer.html
+++ b/timer.html
@@ -81,6 +81,21 @@
         #countdownDisplay {
             color: #F5DF4D; /* Dezelfde kleur als de titel */
         }    
+
+        button {
+            background-color: #F5DF4D; /* Yellow color like the header */
+            font-size: 20px; /* Increase font size */
+            padding: 10px 20px; /* Increase padding */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
+        button:hover {
+            background-color: #e0c944; /* Slightly darker yellow on hover */
+        }
+
         
     </style>
 </head>
