--- a/timer.html
+++ b/timer.html
@@ -12,6 +12,7 @@
             font-family: 'Roboto Condensed', sans-serif;
             margin: 0;
             padding: 0;
+            min-height: 150vh;
         }
         h1 {
             color: #F5DF4D;
