--- a/handigelinks.html
+++ b/handigelinks.html
@@ -126,6 +126,7 @@
         <li><a href="https://www.appsheet.com/start/5c339456-e64f-48e7-9a36-db13c95dd8a0#appName=AppTime-1320760&group=%5B%7B%22Column%22%3A%22Date%22%2C%22Order%22%3A%22Ascending%22%7D%5D&page=fastTable&sort=%5B%7B%22Column%22%3A%22Date%22%2C%22Order%22%3A%22Ascending%22%7D%2C%7B%22Column%22%3A%22Time_from%22%2C%22Order%22%3A%22Ascending%22%7D%5D&table=meTime_Open&view=Open+TS" class= "link3"><i class="fa-solid fa-clock"></i> Apptime</a></li>
         <li><a href="https://applusglobal-my.sharepoint.com/:x:/r/personal/l_korwinpiotrowski_applusglobal_com/Documents/Planning%202025/Planning%202025%20rev.2.xlsx?d=w560df1fe6d6845b4b2d1155fa47b7217&csf=1&web=1&e=hjOoBS&nav=MTVfezAwMDAwMDAwLTAwMDEtMDAwMC0wMDAwLTAwMDAwMDAwMDAwMH0" class= "link4"><i class="fa-regular fa-calendar-days"></i> Planning </a></li>
         <li><a href="https://portal.srxp.com/#/login" class= "link2"><i class="fa-solid fa-receipt"></i> SRXP Declaratie</a></li>
+        <li><a href="https://werknemer.verzuimsignaal.nl" class= "link2"><i class="fa-solid fa-head-side-cough"></i> Verzuimportaal</a></li>
         <li><a href="http://outlook.com/owa/assincoapplus.com" class= "link1"><i class="fa-regular fa-envelope"></i>Email</a></li>
     </ul>
 
