--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -84,7 +84,7 @@
         </div>
 
         <div id="asmeOptions" style="display:none;">
-            <label for="asmeTechnique">Kies de ASME techniek:</label>
+            <label for="asmeTechnique">Plaats van de BKI:</label>
             <select id="asmeTechnique" name="asmeTechnique">
                 <option value="" disabled selected>locatie BKI</option>
                 <option value="Sourceside">BKI bronzijde</option>
@@ -92,7 +92,7 @@
             </select>
             <br><br>
 
-            <label for="weldType">Kies de las type (A, B, C, D):</label>
+            <label for="weldType">Kies het las type (A, B, C, D):</label>
             <select id="weldType" name="weldType">
                 <option value="" disabled selected>Selecteer las type</option>
                 <option value="A">A</option>
