--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -92,7 +92,7 @@
             </select>
             <br><br>
 
-            <label for="weldType">Kies het las type (A, B, C, D):</label>
+            <label for="weldType">Kies het las type (zie afbeelding):</label>
             <select id="weldType" name="weldType">
                 <option value="" disabled selected>Selecteer las type</option>
                 <option value="A">A</option>
