--- a/handigelinks.html
+++ b/handigelinks.html
@@ -128,6 +128,8 @@
         <li><a href="https://portal.srxp.com/#/login" class= "link2"><i class="fa-solid fa-receipt"></i> SRXP Declaratie</a></li>
         <li><a href="https://werknemer.verzuimsignaal.nl" class= "link2"><i class="fa-solid fa-head-side-cough"></i> Verzuimportaal</a></li>
         <li><a href="http://outlook.com/owa/assincoapplus.com" class= "link1"><i class="fa-regular fa-envelope"></i>Email</a></li>
+        <li><a href="https://applus-textiles.promonline.nl/base/public/login?returnURL=%2Fshop%2Fhome" class= "link3"><i class="fa-solid fa-shirt"></i> Kleding</a></li>
+        <li><a href="https://www.vdp.com/NL/Catalogues/viewcatalog/4640/" class= "link4"><i class="fa-solid fa-helmet-safety"></i>Werkkleding</a></li>
     </ul>
 
 </body>
