--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -42,7 +42,7 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('myModal')">&times;</span>
-            <p>Deze tool gaat uit van de nominale wanddikte bij EN en zal bij ASME de maximale lasoverdikte voorstellen en bij de wanddikte tellen.
+            <p>Deze tool gaat uit van de nominale wanddikte bij EN en zal bij ASME de maximale lasoverdikte voorstellen en bij de wanddikte tellen (Let op, je mag theoretisch 2x de lasoverdikte tellen maar de tool doet maar 1x de maximale lasoverdikte voorstellen, je kan het zelf aanpassen naar max 2x de lasoverdikte).
             Bij EN wordt er gebruikt van de regel dat bij gebruik van Se75 of Ir192 er bij bepaalde diktes een draadje minder zichtbaar hoeft te zijn, dit doet de tool al meenemen en je hoeft dus niet zelf nog een draadje minder te nemen. De tool gaat er van uit dat de BKI bij DWSI aan Filmzijde zit en bij DWDI of SWSI aan Bronzijde.
             </p>
         </div>
