--- a/kvregel.html
+++ b/kvregel.html
@@ -29,6 +29,12 @@
         button.calculate-btn:hover {
             background-color: #e6c944;
         }
+
+        label, select, input {
+            display: block;
+            width: 100%;
+            margin: 10px 0;
+        }
     </style>
 
 <script>
@@ -77,7 +83,6 @@
 
 
 <div class="container">
-    <h1>KV regel</h1>
     <label for="wanddikte">Wanddikte (mm):</label>
     <input type="number" id="wanddikte" min="0" step="0.01">
 
@@ -96,10 +101,9 @@
 
     <button type="button" class ="calculate-btn" onclick="calculateKV()">Bereken KV</button>
 
-    <div id="result"></div>
+    <div id="result" style="color: #F5DF4D;"></div>
 </div>
-    <h2>Resultaat</h2>
-    <h2 id="result" style="color: #F5DF4D;"></h2>
+
 
 </body>
 </html>
