--- a/kvregel.html
+++ b/kvregel.html
@@ -34,6 +34,7 @@
             display: block;
             width: 100%;
             margin: 10px 0;
+            align-items: center;
         }
     </style>
 
