--- a/kvregel.html
+++ b/kvregel.html
@@ -33,9 +33,13 @@
         label, select, input {
             display: block;
             width: 100%;
-            margin: 10px 0;
             align: center;
         }
+
+        #result {
+            font-size: 1.2rem;
+        }   
+        
     </style>
 
 <script>
