--- a/kvregel.html
+++ b/kvregel.html
@@ -33,11 +33,11 @@
         label, select, input {
             display: block;
             width: 100%;
-            align: center;
+            align-items: center;
         }
 
         #result {
-            font-size: 1.2rem;
+            font-size: 1.4rem;
             margin-top: 15px;
         }   
         
