--- a/kvregel.html
+++ b/kvregel.html
@@ -13,6 +13,10 @@
             padding: 50px;
             margin: 0;
             min-height: 150vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
 
         /* Style for the calculate button */
