--- a/kvregel.html
+++ b/kvregel.html
@@ -38,6 +38,7 @@
             display: block;
             width: 100%;
             align-items: center;
+            margin-bottom: 15px;
         }
 
         #result {
