--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <li><a href="handigelinks.html" class= "link4"><i class="fa-solid fa-link"></i>Handige links<i class="fa-solid fa-link"></i></a></li>
         <li><a href="buistabel.html" class= "link2"><i class="fa-solid fa-chart-line"></i>Buis-tabellen<i class="fa-solid fa-chart-line"></i></a></li>
         <li><a href="verzet.html" class= "link1"><i class="fa-solid fa-ring"></i>Verzet van ovaaltje<i class="fa-solid fa-ring"></i></a></li>
+        <li><a href="kvregel.html" class= "link4"><i class="fa-solid fa-bolt"></i>KV Regel<i class="fa-solid fa-bolt"></i></a></li>
         <li><a href="timer.html" class="link3"><i class="fa-solid fa-stopwatch"></i>Gamma Timers<i class="fa-solid fa-stopwatch"></i></a></li>
     </ul>
 
