--- a/gevuldeleiding.html
+++ b/gevuldeleiding.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+    <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staalequivalent Berekening</title>
+    <title>Gevulde Leiding</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            font-family: 'Roboto Condensed', sans-serif;
+            margin: 0;
         }
 
         label, select, input, button {
@@ -17,8 +20,22 @@
     </style>
 </head>
 <body>
+    <h1 style="color: #F5DF4D; text-align: center;">Gevulde Leiding</h1>
 
-    <h1>Gevulde Leiding</h1>
+     <!-- De knop om het pop-up venster te openen -->
+    <button class="info-btn" onclick="openModal('myModal')">i</button>
+
+    <!-- Het pop-up venster -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('myModal')">&times;</span>
+            <p>Tool om de totale af te lezen dikte te krijgen. De tool berekent het staalequivalent van het medium en telt dit op bij 2x de wanddikte.
+            </p>
+        </div>
+    </div>
+
+    <script src="script.js"></script> <!-- Link naar externe JavaScript -->
+
 
     <label for="diameter">Diameter van de pijp (D) in mm:</label>
     <input type="number" id="diameter" placeholder="Vul de diameter in">
@@ -40,7 +57,9 @@
 
     <button onclick="berekenDikte()">Bereken</button>
 
-    <p id="resultaat"></p>
+    <h2>Resultaat</h2>
+    <h2 id="resultaat" style="color: #F5DF4D;"></h2>
+    
 
     <script>
         function handleDensityChange() {
