--- a/gevuldeleiding.html
+++ b/gevuldeleiding.html
@@ -112,7 +112,7 @@
                 return;
             }
 
-            const totaleDikte = 2 * t + (dichtheid / (7800 * (D - 2 * t)));
+            const totaleDikte = 2 * t + ((dichtheid / 7800) * (D - 2 * t));
 
             document.getElementById('resultaat').textContent = `De totale doorstraalde dikte is ${totaleDikte.toFixed(2)} mm.`;
         }
