--- a/onstream.html
+++ b/onstream.html
@@ -121,7 +121,7 @@
     <h1>Onstream tools</h1>
 
     <ul class="link-list">
-        <li><a href="gevuldeleiding.html" class= "link1"><i class="fa-brands fa-google-scholar"></i> Gevulde Leiding</a></li>
+        <li><a href="gevuldeleiding.html" class= "link1"><i class="fa-solid fa-circle-half-stroke"></i> Gevulde Leiding</a></li>
     </ul>
 
 </body>
