--- a/bronkeuze2.html
+++ b/bronkeuze2.html
@@ -80,7 +80,7 @@
     <button type="button" class ="calculate-btn" onclick="berekenBron()">Bronkeuze</button>
 
 
-    <h2>Wmax en bronkeuze</h2>
+    <h2 style="color: #F5DF4D;">Wmax en bronkeuze</h2>
     <h2 id="wmax" style="color: #F5DF4D;"></h2>
     <h2 id="resultaat" style="color: #F5DF4D;"></h2>
 
