--- a/onstream.html
+++ b/onstream.html
@@ -122,6 +122,7 @@
 
     <ul class="link-list">
         <li><a href="gevuldeleiding.html" class= "link1"><i class="fa-solid fa-circle-half-stroke"></i> Gevulde Leiding</a></li>
+        <li><a href="bronkeuze2.html" class= "link2"><i class="fa-solid fa-radiation"></i> Bronkeuze RT21021/RT21022</a></li>
     </ul>
 
 </body>
