--- a/bronkeuze2.html
+++ b/bronkeuze2.html
@@ -73,8 +73,8 @@
 
     <label for="klasse">Klasse:</label>
     <select id="klasse">
-        <option value="ta">TA</option>
-        <option value="tb">TB</option>
+        <option value="ta">TA (basic technique)</option>
+        <option value="tb">TB (improved technique)</option>
     </select><br>
 
     <button type="button" class ="calculate-btn" onclick="berekenBron()">Bronkeuze</button>
