--- a/bronkeuze2.html
+++ b/bronkeuze2.html
@@ -16,6 +16,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            min-height: 150vh;
         }
 
         /* Style for the calculate button */
