--- a/bronkeuze2.html
+++ b/bronkeuze2.html
@@ -161,6 +161,8 @@
             document.getElementById('resultaat').textContent = resultaat;
 
             document.getElementById("wmax").textContent = wmax;
+
+            document.getElementById("resultaat").scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 
