--- a/bronkeuze2.html
+++ b/bronkeuze2.html
@@ -68,8 +68,8 @@
 
     <label for="techniek">Techniek:</label>
     <select id="techniek">
-        <option value="tangentiaal">Tangentiaal</option>
-        <option value="dubbel_wand">Dubbel wand</option>
+        <option value="tangentiaal">Tangentiaal(RT21021)</option>
+        <option value="dubbel_wand">Dubbel wand(RT21022)</option>
     </select><br>
 
     <label for="klasse">Klasse:</label>
