--- a/onstreamffd.html
+++ b/onstreamffd.html
@@ -83,7 +83,7 @@
     <label for="isolatie">Isolatiedikte in mm:</label>
     <input type="number" id="isolatie" value="0" min="0">
 
-    <button type="button" clas = "calculate-btn" onclick="berekenFFD()">Bereken Minimale FFD</button>
+    <button type="button" class="calculate-btn" onclick="berekenFFD()">Bereken Minimale FFD</button>
 </form>
 
 <h2 style="color: #F5DF4D;">Resultaat</h2>
