--- a/onstreamffd.html
+++ b/onstreamffd.html
@@ -87,7 +87,7 @@
 </form>
 
 <h2 style="color: #F5DF4D;">Resultaat</h2>
-<h2 id="resultaat" style="color #F5DF4D"></h2>
+<h2 id="resultaat" style="color: #F5DF4D;"></h2>
 
 <script>
 function berekenFFD() {
