--- a/onstream.html
+++ b/onstream.html
@@ -123,6 +123,7 @@
     <ul class="link-list">
         <li><a href="gevuldeleiding.html" class= "link1"><i class="fa-solid fa-circle-half-stroke"></i> Gevulde Leiding</a></li>
         <li><a href="bronkeuze2.html" class= "link2"><i class="fa-solid fa-radiation"></i> Bronkeuze RT21021/RT21022</a></li>
+        <li><a href="onstreamffd.html" class= "link3"><i class="fa-solid fa-ruler"></i> Minimale FFD Onstream</a></li>
     </ul>
 
 </body>
