--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -61,7 +61,7 @@
         <br><br>
 
         <label for="wanddikte">Wanddikte t (mm):</label>
-        <input type="number" id="wanddikte" name="wanddikte" step="0.1" placeholder="Vul wanddikte in" required>
+        <input type="number" id="wanddikte" name="wanddikte" step="any" placeholder="Vul wanddikte in" required>
         <br><br>
 
         <div id="enOptions" style="display:none;">
