--- a/zinnen.html
+++ b/zinnen.html
@@ -46,8 +46,8 @@
         }
     </script>
 
-    <p id="copyText" style="color: #F5DF4D;" style="font-size: 1.5rem;" onclick="copyText()">Double film technique used in order to get the correct density in the weld and parent materials.</p>
-    <p id="copyText" style="color: #F5DF4D;" style="font-size: 1.5rem;" onclick="copyText()">In consultancy with the client, Se75 used instead of X-ray due to the limited accessibility and/or radiation safety.</p>
+    <p id="copyText" style="color: #f7e672;" style="font-size: 1.5rem;" onclick="copyText()">Double film technique used in order to get the correct density in the weld and parent materials.</p>
+    <p id="copyText" style="color: #f7e672;" style="font-size: 1.5rem;" onclick="copyText()">In consultancy with the client, Se75 used instead of X-ray due to the limited accessibility and/or radiation safety.</p>
 </body>
   
 </html>
