--- a/zinnen.html
+++ b/zinnen.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1 style="color: #F5DF4D; text-align: center;">Rapportage zinnen</h1>
-
+    <h2 style="color: #F5DF4D; text-align: center;">(klik om te kopieëren)</h2>
     <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
 
@@ -48,6 +48,7 @@
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Double film technique used in order to get the correct density in the weld and parent materials.</p>
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">In consultancy with the client, Se75 used instead of X-ray due to the limited accessibility and/or radiation safety.</p>
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">2 films (D4 & D5) per exposure used to get the correct density in the parent material and the weld.</p>
+    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Due to the geometry of the object, limited accessibility and/or radiation safety, Se75 used instead of X-ray.</p>
 
 </body>
 </html>
