--- a/zinnen.html
+++ b/zinnen.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1 style="color: #F5DF4D; text-align: center;">Rapportage zinnen</h1>
-    <h2 style="color: #F5DF4D; text-align: center;">(klik om te kopieëren)</h2>
+    <h2 style="color: #f5eaa2; text-align: center;">(klik om te kopieëren)</h2>
     <!-- De knop om het pop-up venster te openen -->
     <button class="info-btn" onclick="openModal('myModal')">i</button>
 
