--- a/zinnen.html
+++ b/zinnen.html
@@ -46,9 +46,11 @@
 
     <!-- Rapportage zinnen die gekopieerd kunnen worden -->
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Double film technique used in order to get the correct density in the weld and parent materials.</p>
-    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">In consultancy with the client, Se75 used instead of X-ray due to the limited accessibility and/or radiation safety.</p>
+    <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">In consultancy with the client, Se75 used instead of X-ray due to the limited accessibility and/or radiation safety.</p>
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">2 films (D4 & D5) per exposure used to get the correct density in the parent material and the weld.</p>
-    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Due to the geometry of the object, limited accessibility and/or radiation safety, Se75 used instead of X-ray.</p>
+    <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">Due to the geometry of the object, limited accessibility and/or radiation safety, Se75 used instead of X-ray.</p>
+    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Ir192 used instead of X-ray because of the penetrated thickness.
+Penetrated thickness is the sum of the wall-thickness, Orifice head thickness, and weld reinforcement.</p>
 
 </body>
 </html>
