--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -227,7 +227,7 @@
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
                     } else if (technique === "DWDI" && doorstraaldeDikte >5 &&  doorstraaldeDikte <= 12) {
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
-                    } else if (technique === "DWSI" && doorstraaldDikte >5 && doorstraaldeDikte <= 20) {
+                    } else if (technique === "DWSI" && doorstraaldeDikte >5 && doorstraaldeDikte <= 20) {
                         wire = "W" + (parseInt(wire.substring(1))-1);
                     }
                     
@@ -237,7 +237,7 @@
                     } else if (technique === "DWDI" && doorstraaldeDikte > 10 && doorstraaldeDikte <= 25) {
                         wire = "W" + (parseInt(wire.substring(1)) - 1);
                     } else if (technique === "DWSI" && doorstraaldeDikte >10 && doorstraaldeDikte <= 40) {
-                        wire = "W" + (parseInt(wire.subtring(1)) - 1 );
+                        wire = "W" + (parseInt(wire.substring(1)) - 1 );
                     }
                 }
 
