--- a/MinFFD.html
+++ b/MinFFD.html
@@ -66,9 +66,9 @@
         </select><br><br>
 
         <div id="extraOpties" style="display:none;">
-            <label for="optie">Kies een extra optie (optioneel):</label>
+            <label for="optie">Centraal of Excentrisch:</label>
             <select id="optie" name="optie">
-                <option value="">Geen</option>
+                <option value="">Nee</option>
                 <option value="1">Centraal</option>
                 <option value="2">Excentrisch</option>
             </select><br><br>
